# rust-cueball

./: Cargo.toml  Jenkinsfile  Makefile  README.md
connections/postgres-connection/: Cargo.toml
connections/postgres-connection/examples/: postgres_connection_pool.rs
connections/postgres-connection/src/: lib.rs
connections/tcp-stream-connection/: Cargo.toml
connections/tcp-stream-connection/src/: lib.rs
cueball/: CHANGES.md  Cargo.toml
cueball/examples/: basic.rs
cueball/src/: backend.rs  connection.rs  connection_pool.rs  error.rs  lib.rs  resolver.rs
cueball/tests/: basic_test.rs
examples/: basic.rs
manatee-primary-resolver/: Cargo.toml
manatee-primary-resolver/src/: util.rs
postgres-connection/: Cargo.toml
postgres-connection/src/: lib.rs
resolvers/dns-resolver/: Cargo.toml
resolvers/dns-resolver/src/: dns_client.rs  lib.rs  resolver.rs
resolvers/manatee-primary-resolver/: Cargo.toml  README.md
resolvers/manatee-primary-resolver/src/: lib.rs
resolvers/manatee-primary-resolver/src/common/: mod.rs  test_data.rs  util.rs
resolvers/manatee-primary-resolver/tests/: channel_test.rs  connection_test.rs  watch_test.rs
resolvers/static-resolver/: Cargo.toml
resolvers/static-resolver/src/: lib.rs
src/: backend.rs  connection.rs  connection_pool.rs  error.rs  lib.rs  resolver.rs
src/connection_pool/: types.rs
static-resolver/: Cargo.toml
tcp-stream-connection/: Cargo.toml
tests/: basic_test.rs
tools/manatee-echo-resolver/: Cargo.toml  README.md
tools/manatee-echo-resolver/src/: main.rs
