[package]
name = "cueball"
version = "0.2.2"
authors = [
        "Kelly McLaughlin <kelly.mclaughlin@joyent.com>",
        "Jon Anderson <jon.anderson@joyent.com>",
        "Isaac Davis <isaac.davis@joyent.com>"
]
edition = "2018"

[dependencies]
backoff = "0.1.5"
base64 = "0.10.1"
chrono = "0.4.7"
periodic = "0.1.1"
derive_more = "0.14.0"
rand = "0.7.0"
sha1 = "0.6.0"
slog = "2"
slog-stdlog = "3"

[dev-dependencies]
slog-term = "2.4.0"
