[package]
name = "cueball-postgres-connection"
version = "0.3.2"
authors = ["Kelly McLaughlin <kelly.mclaughlin@joyent.com>"]
description = """
This is an implementation of the cueball Connection trait for postgres::Client from the rust-postgres crate.
"""
repository = "https://github.com/joyent/rust-cueball"
keywords = ["pool","joyent"]
readme = "../../README.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
cueball = { path = '../../cueball', version = '0.3.5' }
native-tls = "0.2.3"
postgres = "0.17.3"
postgres-protocol = "= 0.5.1"
serde = "1.0.84"
serde_derive = "1.0.84"
postgres-native-tls = "0.3.0"
unicode-normalization = "=0.1.5"

[dev-dependencies]
cueball-static-resolver = { path = "../../resolvers/static-resolver", version = "0.3.0" }
slog = "2.4.1"
slog-term = "2.4.0"
