[package]
name = "cueball-tcp-stream-connection"
version = "0.3.0"
authors = ["Kelly McLaughlin <kelly.mclaughlin@joyent.com>"]
description = """
This is an implementation of the cueball Connection trait for TcpStream from the rust standard library.
"""
repository = "https://github.com/joyent/cueball"
readme = "../../README.md"
license = "Mozilla"
edition = "2018"

[dependencies]
cueball = { path = '../../cueball' }
