[package]
name = "cueball-manatee-primary-resolver"
version = "0.3.0"
authors = ["Kelly McLaughlin <kelly.mclaughlin@joyent.com>", "Isaac Davis <isaac.davis@joyent.com>"]
description = """
An implementation of the cueball Resolver trait that is specific to the Joyent manatee project. It queries a zookeeper 
cluster to determine the PostgreSQL replication primary from a set of PostgreSQL replication peers.
"""
repository = "https://github.com/joyent/rust-cueball"
keywords = ["pool","joyent"]
readme = "../../README.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
cueball = { path = "../../cueball", version = "0.3.0" }
itertools = "0.8.0"
failure = "0.1.5"
futures = "0.1.28"
rand = "0.6.4"
serde = { version ="1.0.102", features = ["derive"]}
serde_json = "1.0.40"
slog = { version = "2.4.1", features = [ "max_level_trace" ] }
slog-stdlog = "3"
tokio = "0.1.22"
tokio-zookeeper = { git = 'https://github.com/joyent/tokio-zookeeper', version = "0.1.0" }
unicode-normalization = "=0.1.5"
url = "2.1.0"

[dev-dependencies]
clap = "2.32"
quickcheck = "0.8.0"
slog-term = "2.4.0"
uuid = { version = "0.8", features = ["v4"] }
