[package]
name = "cueball-manatee-primary-resolver"
version = "0.5.1"
authors = ["Kelly McLaughlin <kelly.mclaughlin@joyent.com>", "Isaac Davis <isaac.davis@joyent.com>"]
description = """
An implementation of the cueball Resolver trait that is specific to the Joyent manatee project. It queries a zookeeper
cluster to determine the PostgreSQL replication primary from a set of PostgreSQL replication peers.
"""
repository = "https://github.com/joyent/rust-cueball"
keywords = ["pool","joyent"]
readme = "./README.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
backoff = "0.1.6"
clap = "2.32"
cueball = { path = "../../cueball", version = "0.3.5" }
itertools = "0.8.0"
failure = "0.1.5"
futures = "0.1.28"
lazy_static = "1.4.0"
rand = "0.7.3"
serde = { version ="1.0.102", features = ["derive"]}
serde_json = "1.0.40"
slog = { version = "2.4.1", features = [ "max_level_trace" ] }
slog-bunyan = "2.2.0"
tokio = "0.1.22"
tokio-zookeeper = { version = "0.1.3", package = "joyent-tokio-zookeeper" }
url = "2.1.0"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
quickcheck = "0.8.0"
serial_test = "0.3.2"
