[package]
name = "cueball-static-resolver"
version = "0.3.0"
authors = ["Kelly McLaughlin <kelly.mclaughlin@joyent.com>"]
description = """
This is an implementation of the cueball Resolver trait that provides a static list of backends for use by the connection pool.
"""
repository = "https://github.com/joyent/cueball"
readme = "../../README.md"
license = "Mozilla"
edition = "2018"

[dependencies]
cueball = { path = '../../cueball' }

[dev-dependencies]
cueball-tcp-stream-connection = { path = '../../connections/tcp-stream-connection' }
slog = "2.4.1"
slog-term = "2.4.0"
