[package]
name = "cueball-static-resolver"
version = "0.3.1"
authors = ["Kelly McLaughlin <kelly.mclaughlin@joyent.com>"]
description = """
This is an implementation of the cueball Resolver trait that provides a static list of backends for use by the connection pool.
"""
repository = "https://github.com/joyent/rust-cueball"
keywords = ["pool","joyent"]
readme = "../../README.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
cueball = { path = '../../cueball', version = '0.3.5' }

[dev-dependencies]
cueball-tcp-stream-connection = { path = '../../connections/tcp-stream-connection', version = '0.3.0' }
slog = "2.4.1"
slog-term = "2.4.0"
